--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="style.css">
+    
     <title>DHSS App</title>
 </head>
 <body>
@@ -39,18 +39,21 @@
             </li>
         </ul>
     </div>
-    <div class="content" id="home-tab">
-    <div class="home-row">
-        <h1>DRUKGYEL HIGHER SECONDARY SCHOOL</h1>
-    </div>
-    <div class="home-row">
-        <img src="school_logo.jpg" alt="School Logo">
-    </div>
-    <div class="home-row">
-        <h2>Administration Details</h2>
-        <p>Principal: Kelden </p>
-        <p>Vice Principal: Dorji</p>
-        <p>Contact: admin@drukgyelhs.edu</p>
+    <div class="scrn">
+        <div class="content" id="home-tab">
+    
+        <div class="home-row">
+            <h1>DRUKGYEL HIGHER SECONDARY SCHOOL</h1>
+        </div>
+        <div class="home-row">
+            <img id="logo" src="./assets/logo.jpeg" alt="School Logo">
+        </div>
+        <div class="home-row">
+            <h2>Administration Details</h2>
+            <p>Principal: Kelden </p>
+            <p>Vice Principal: Dorji</p>
+            <p >Contact: admin@drukgyelhs.edu</p>
+        </div>
     </div>
 </div>
     <div class="content" id="attendance-tab">
@@ -74,5 +77,6 @@
     <div class="content" id="in-campus-leave-tab">
         <!-- Content for In-campus Leave tab -->
     </div>
+    <script src="code.js"></script>
 </body>
 </html>
